--- a/ProProjects/Data Science/Billboard_Predictions.html
+++ b/ProProjects/Data Science/Billboard_Predictions.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Billbaord Predictions (In Progress)</title>
+    <title>Billbaord Predictions</title>
 
     <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/styles.css">
     <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/pygment_trac.css">
@@ -27,12 +27,13 @@
         </ul>
       </header>
       <section>
-        <h1>Billbaord Predictions (In Progress)</h1>
+        <h1>Billbaord Predictions</h1>
         <p>The goal of this project is to discover if there is a "formula" for making a hit Billboard song. The project uses data from 
           <a href="https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-09-14/readme.md">this data base</a> 
           and creates a predictive model based off objective qualities of songs such as tempo, key, instrumentalness as well as qualities that are commonly seen as 
           subjective such as valence and dancability to predict whether or not a song will make the Top 100 Billboard, as well as make a model to determine the most likely 
-          position on the Billboard. </p>
+          position on the Billboard. Linear Regression and Logistic Regression predictive models were created, resulting in inaccurate models. 
+          The flaws of using these techniques on this particular dataset are discussed.</p>
       <footer>
       </footer>
     </div>
