--- a/ProProjects/Data Science/Billboard_Predictions.html
+++ b/ProProjects/Data Science/Billboard_Predictions.html
@@ -33,7 +33,7 @@
           and creates a predictive model based off objective qualities of songs such as tempo, key, instrumentalness as well as qualities that are commonly seen as 
           subjective such as valence and dancability to predict whether or not a song will make the Top 100 Billboard, as well as make a model to determine the most likely 
           position on the Billboard. Linear Regression and Logistic Regression predictive models were created, resulting in inaccurate models. 
-          The flaws of using these techniques on this particular dataset are discussed.</p>
+          The flaws of using these techniques on this particular dataset are discussed. The full project and discussion is available <a href="https://github.com/adriendinzey/Billboard-Top-100-Preditions">here</a></p>
       <footer>
       </footer>
     </div>
