--- a/ProProjects/Data Science/Billboard_Predictions.html
+++ b/ProProjects/Data Science/Billboard_Predictions.html
@@ -27,7 +27,7 @@
         </ul>
       </header>
       <section>
-        <h1>Billbaord Predictions</h1>
+        <h1>Billboard Predictions</h1>
         <p>The goal of this project is to discover if there is a "formula" for making a hit Billboard song. The project uses data from 
           <a href="https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-09-14/readme.md">this data base</a> 
           and creates a predictive model based off objective qualities of songs such as tempo, key, instrumentalness as well as qualities that are commonly seen as 
