added pokemon project to table of contents

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <h1>Professional Projects</h1>
         <h3>Data Science</h3>
         <ul>
+          <li><h3><a href="./ProProjects/Data Science/Pokemon_Machine_Learning_Analysis.html">Pokemon Machine Learning Analysis</a></h3></li>
           <li><h3><a href="./ProProjects/Data Science/Billboard_Predictions.html">Billboard Predictions</a></h3></li>
           <li><h3><a href="./ProProjects/Data Science/MaskUsage_and_COVID-19.html">Mask Usage and COVID-19</a></h3></li>
         </ul>
