fixed html analysis redirect

--- a/ProProjects/Data Science/Pokemon_Machine_Learning_Analysis.html
+++ b/ProProjects/Data Science/Pokemon_Machine_Learning_Analysis.html
@@ -31,7 +31,7 @@
         <p>Have you ever noticed that in some video games, no matter the genre, characters tend to follow certain "archetypes" in battle? 
           For example, you might have a beefy, strong but slow character, a precise, high-damage character or a speedy but weak character. 
           To go one step further, have you ever noticed that when the concept of "types" or "elements" are involved, these archetypes are even more common? 
-          This project was to set out to find if this trope is present in the Pokemon games. Click here for the <a href="<a href="./ProProjects/Data Science/Pokemon_Analysis.html">full report</a>!
+          This project was to set out to find if this trope is present in the Pokemon games. Click here for the <a href="./ProProjects/Data Science/Pokemon_Analysis.html">full report</a>!
           The full project is available <a href="https://github.com/adriendinzey/Pokemon-Machine-Learning-Analysis">here</a></p>
       <footer>
       </footer>
