--- a/ProProjects/Data Science/pokemon/Pokemon_Analysis.html
+++ b/ProProjects/Data Science/pokemon/Pokemon_Analysis.html
@@ -933,6 +933,8 @@ html{
           box-sizing:inherit; }
 
 body{
+  max-width: 1024px;
+  margin: auto;
   font-size:14px;
   font-weight:400;
   letter-spacing:0;
@@ -14602,7 +14604,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="images/ballwithcards.jpg" alt="" width="1000"></p>
+<p><img src="images/ballwithcards.jpg" alt="" width="1024"></p>
 
 </div>
 </div>
@@ -14650,7 +14652,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="images/gameboyGames.jpg" alt="Gameboy Games" width="1000"/></p>
+<p><img src="images/gameboyGames.jpg" alt="Gameboy Games" width="1024"/></p>
 
 </div>
 </div>
@@ -17053,7 +17055,7 @@ ShapiroResult(statistic=0.9910305738449097, pvalue=0.018365293741226196)
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Analysis">Analysis<a class="anchor-link" href="#Analysis">&#182;</a></h2><p><img src="images/pikachus.jpg" alt="Lots of Pikachu's" width="500"/></p>
+<h2 id="Analysis">Analysis<a class="anchor-link" href="#Analysis">&#182;</a></h2><p><img src="images/pikachus.jpg" alt="Lots of Pikachu's" width="1024"/></p>
 
 </div>
 </div>
@@ -18536,7 +18538,7 @@ class="
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Final-Thoughts">Final Thoughts<a class="anchor-link" href="#Final-Thoughts">&#182;</a></h2><p><img src="images/bigpika.jpg" alt="Gameboy Games" width="600"/></p>
+<h2 id="Final-Thoughts">Final Thoughts<a class="anchor-link" href="#Final-Thoughts">&#182;</a></h2><p><img src="images/bigpika.jpg" alt="Gameboy Games" width="1024"/></p>
 
 </div>
 </div>
