--- a/ProProjects/Data Science/Billboard_Predictions.html
+++ b/ProProjects/Data Science/Billboard_Predictions.html
@@ -28,12 +28,15 @@
       </header>
       <section>
         <h1>Billboard Predictions</h1>
+        <h4>09/2021 — 01/2022 (completed)</h4>
         <p>The goal of this project is to discover if there is a "formula" for making a hit Billboard song. The project uses data from 
           <a href="https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-09-14/readme.md">this data base</a> 
           and creates a predictive model based off objective qualities of songs such as tempo, key, instrumentalness as well as qualities that are commonly seen as 
           subjective such as valence and dancability to predict whether or not a song will make the Top 100 Billboard, as well as make a model to determine the most likely 
           position on the Billboard. Linear Regression and Logistic Regression predictive models were created, resulting in inaccurate models. 
-          The flaws of using these techniques on this particular dataset are discussed. The full project and discussion is available <a href="https://github.com/adriendinzey/Billboard-Top-100-Preditions">here</a></p>
+          The flaws of using these techniques on this particular dataset are discussed. </p>
+          <br>
+          <h3>The full project and discussion is available <a href="https://github.com/adriendinzey/Billboard-Top-100-Preditions">here</a></h3>
       <footer>
       </footer>
     </div>
