--- a/ProProjects/Data Science/Pokemon_Machine_Learning_Analysis.html
+++ b/ProProjects/Data Science/Pokemon_Machine_Learning_Analysis.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Pokemon Machine Learning Analysis</title>
+    <title>Pokémon Machine Learning Analysis</title>
 
     <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/styles.css">
     <link rel="stylesheet" href="https://adriendinzey.github.io/CSS/pygment_trac.css">
@@ -27,12 +27,12 @@
         </ul>
       </header>
       <section>
-        <h1>Pokemon Machine Learning Analysis</h1>
+        <h1>Pokémon Machine Learning Analysis</h1>
         <h4>03/2022 — 04/2022 (completed)</h4>
         <p>Have you ever noticed that in some video games, no matter the genre, characters tend to follow certain "archetypes" in battle? 
           For example, you might have a beefy, strong but slow character, a precise, high-damage character or a speedy but weak character. 
           To go one step further, have you ever noticed that when the concept of "types" or "elements" are involved, these archetypes are even more common? 
-          This project was to set out to find if this trope is present in the Pokemon games. Click here for the <a href="./pokemon/Pokemon_Analysis.html">full report</a>!          
+          This project was to set out to find if this trope is present in the Pokémon games. Click here for the <a href="./pokemon/Pokemon_Analysis.html">full report</a>!          
         </p>
         <br>
         <h3>The full project is available <a href="https://github.com/adriendinzey/Pokemon-Machine-Learning-Analysis">here</a></h3>
