--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta property="og:image" content="images/preview_image.jpg" />
     <title>Adrien Dinzey</title>
 
     <link rel="stylesheet" href="CSS/styles.css">
