edited about me

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section>
         <h1>About Me</h1>
          
-        <p>I am a Computer Science student at the University of Manitoba heading into my final year! Upon graduation I plan to pursue a Master's degree in Machine Learning/Artifical Intelligence.</p>
+        <p>I am a Computer Science student at the University of Manitoba heading into my final year!</p>
 
         <p>I have many different hobbies that I use as creative outputs to express myself. <br>
         These hobbies range from food to music to Mathematics and beyond! </p>
