added page for newest project, instagram caption cooker

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         These hobbies range from food to music to Mathematics and beyond! </p>
         
         <h1>Professional Projects</h1>
+        <h3>Computer Science</h3>
+        <ul>
+          <li><h3><a href="./ProProjects/Computer Science/Instagram_Caption_Cooker.html">Instagram Caption Cooker (Early Development)</a></h3></li>
+        </ul>
+
         <h3>Data Science</h3>
         <ul>
           <li><h3><a href="./ProProjects/Data Science/Pokemon_Machine_Learning_Analysis.html">Pokemon Machine Learning Analysis</a></h3></li>
