--- a/ProProjects/Computer Science/Instagram_Caption_Cooker.html
+++ b/ProProjects/Computer Science/Instagram_Caption_Cooker.html
@@ -34,7 +34,7 @@
           This is different from just creating tags or a description of the photo as the user is expecting something that sounds natural for what someone might usually find as a caption on Instagram. 
           The project involves creating convolutional neural networks and recurrent neural network for image recognition and natural language processing.
 
-          This is a group effort between myself and <a href="https://abramkremer.github.io/">Abram Kremer</a> <a href="https://www.linkedin.com/in/abramkremer/">(LinkedIn)</a>.
+          This is a group effort between myself and <a href="https://abramkremer.github.io/">Abram Kremer</a> - <a href="https://www.linkedin.com/in/abramkremer/">(LinkedIn)</a>.
 
           This project aims to use the following technologies:
           <ul>
