--- a/ProProjects/Computer Science/Instagram_Caption_Cooker.html
+++ b/ProProjects/Computer Science/Instagram_Caption_Cooker.html
@@ -39,21 +39,16 @@
           This project aims to use the following technologies:
           <ul>
             <li>
-              Python
-            </li>
-            <li>
-              Tensorflow
+              Python (Tensorflow, Keras, NumPy, Flask)
               <ul>
                 <li>
-                  For creating the actual neural networks required
+                  Creating and implementing the neural networks required.
                 </li>
-              </ul>
-            </li>
-            <li>
-              Keras
-              <ul>
                 <li>
-                  Implementation of the neural networks
+                  Importing and managing data.
+                </li>                
+                <li>
+                  Building REST API with the deployed model.
                 </li>
               </ul>
             </li>
