added recent projects

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         These hobbies range from food to music to Mathematics and beyond! </p>
         
         <h1>Professional Projects</h1>
-        <h3>Computer Science</h3>
+        <h3>Software Engineering</h3>
         <ul>
+          <li><h3><a href="./ProProjects/Software Engineering/E_Commerce_Fullstack_Application.html">E-Commerce Store</a></h3></li>
+          <li><h3><a href="./ProProjects/Software Engineering/Portfolio_Manager_Fullstack_Applcation.html">Personal Portfolio Manager</a></h3></li>
         </ul>
 
         <h3>Data Science</h3>
