added demo videos

--- a/ProProjects/Software Engineering/E_Commerce_Fullstack_Application.html
+++ b/ProProjects/Software Engineering/E_Commerce_Fullstack_Application.html
@@ -33,10 +33,14 @@
             stack with TypeScript is a fully functional, fullstack application with a React based frontend and a RESTful API backend, 
             where users can browse the sample candy store, add items to their shopping cart,
             fill out their payment and shipping details, pay with PayPal and review the orders on their accounts. 
-            The account system is fully functional with user data being persistent, meaning orders are stored in the database.</p>
+            The account system is fully functional with user data being persistent, meaning orders are stored in the database.
+            <video width="640" height="480" controls>
+              <source src="../../images/E-Commerce Demo Video.mp4" type="video/mp4">
+              Your browser does not support the video tag, view the video <a href="../../images/E-Commerce Demo Video.mp4">here</a>
+            </video></p></p>
           <br>
           <h3>The live demo is available for use <a href="https://fullstack-e-commerce-mern-application.onrender.com/">here</a>,
-             with the source code available <a href="https://github.com/adriendinzey/E-Commerce-Fullstack-Application">here</a>. 
+             with the source code available <a href="https://github.com/adriendinzey/E-Commerce-Fullstack-Application">here</a>. <br><br> 
              Note that this demo will likely take a long time to load, as the project goes offline after not being used for a certain period of time, 
              and so it needs to be started back up when first accessed.</h3>
       <footer>
