--- a/ProProjects/Software Engineering/Portfolio_Manager_Fullstack_Application.html
+++ b/ProProjects/Software Engineering/Portfolio_Manager_Fullstack_Application.html
@@ -32,10 +32,13 @@
         <p>This is a fullstack application with the frontend written in JavaScript using the Angular framework and a RESTful API backend written in 
             Python using the Django framework, which connects to a MySQL database. This project utilizes the yFinance API to get real-time data from Yahoo Finance 
             so users can buy and sell stocks based on their current prices at the time of the transaction. Users can fund their account and buy and sell stocks as time goes on, 
-            and can then review their gains and losses from week to week.</p>
+            and can then review their gains and losses from week to week.
+            <video width="640" height="480" controls>
+              <source src="../../images/Portfolio App Demo Video.mp4" type="video/mp4">
+              Your browser does not support the video tag, view the video <a href="../../images/Portfolio App Demo Video.mp4">here</a>
+            </video></p>
           <br>
-          <h3>A demo video is available to watch <a href="https://youtu.be/p0GuMR8rphQ">here</a>,
-             while the source code available <a href="https://github.com/adriendinzey/Portfolio-Manager-Fullstack-Application">here</a>.</h3>
+          <h3>The source code available <a href="https://github.com/adriendinzey/Portfolio-Manager-Fullstack-Application">here</a>.</h3>
       <footer>
       </footer>
     </div>
