--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         
         <h1>Professional Projects</h1>
         <h3>Software Engineering</h3>
-        <ul>
-          <li><h3><a href="./ProProjects/Software Engineering/E_Commerce_Fullstack_Application.html">E-Commerce Store</a></h3></li>
-          <li><h3><a href="./ProProjects/Software Engineering/Portfolio_Manager_Fullstack_Application.html">Personal Portfolio Manager</a></h3></li>
+        <ul>          
+          <li><h3><a href="./ProProjects/Software Engineering/Noodle_Shop_Mobile_App.html">Noodle Shop Mobile Application</a></h3></li>
+          <li><h3><a href="./ProProjects/Software Engineering/E_Commerce_Fullstack_Application.html">E-Commerce Store Web Application</a></h3></li>
+          <li><h3><a href="./ProProjects/Software Engineering/Portfolio_Manager_Fullstack_Application.html">Personal Portfolio Manager Web Application</a></h3></li>
         </ul>
 
         <h3>Data Science</h3>
