--- a/ProProjects/Software Engineering/E_Commerce_Fullstack_Application.html
+++ b/ProProjects/Software Engineering/E_Commerce_Fullstack_Application.html
@@ -35,7 +35,7 @@
             fill out their payment and shipping details, pay with PayPal and review the orders on their accounts. 
             The account system is fully functional with user data being persistent, meaning orders are stored in the database.
             <video width="640" height="480" controls>
-              <source src="../../images/E-Commerce Demo Video.mp4" type="video/mp4">
+              <source src="../../images/NoodleShopAppDemoVideo.mp4" type="video/mp4">
               Your browser does not support the video tag, view the video <a href="../../images/E-Commerce Demo Video.mp4">here</a>
             </video></p></p>
           <br>
