--- a/ProProjects/Software Engineering/Noodle_Shop_Mobile_App.html
+++ b/ProProjects/Software Engineering/Noodle_Shop_Mobile_App.html
@@ -31,7 +31,7 @@
         <h4>010/2023 — 11/2023 (completed)</h4>
         <p>This project, written using TypeScript/JavaScript and the React Native framework, is an Android application that allows customers of a noodle restaurant to customize and create their own bowl of noodles.
             <video width="640" height="480" controls>
-              <source src="../../images/E-Commerce Demo Video.mp4" type="video/mp4">
+              <source src="../../images/NoodleShopAppDemoVideo.mp4" type="video/mp4">
               Your browser does not support the video tag, view the video <a href="../../images/NoodleShopAppDemoVideo.mp4">here</a>
             </video></p></p>
           <br>
