--- a/ProProjects/Software Engineering/Noodle_Shop_Mobile_App.html
+++ b/ProProjects/Software Engineering/Noodle_Shop_Mobile_App.html
@@ -33,7 +33,8 @@
             <video width="304" height="540" controls>
               <source src="../../images/NoodleShopAppDemoVideoPortrait.mp4" type="video/mp4">
               Your browser does not support the video tag, view the video <a href="../../images/NoodleShopAppDemoVideoPortrait.mp4">here</a>
-            </video></p></p>
+            </video></p>
+        <h3>The source code available <a href="https://github.com/adriendinzey/Portfolio-Manager-Fullstack-Application">here</a>.</h3>
           <br>
       <footer>
       </footer>
