--- a/ProProjects/Software Engineering/E_Commerce_Fullstack_Application.html
+++ b/ProProjects/Software Engineering/E_Commerce_Fullstack_Application.html
@@ -39,10 +39,10 @@
               Your browser does not support the video tag, view the video <a href="../../images/E-Commerce Demo Video.mp4">here</a>
             </video></p></p>
           <br>
-          <h3>The live demo is available for use <a href="https://fullstack-e-commerce-mern-application.onrender.com/">here</a>,
-             with the source code available <a href="https://github.com/adriendinzey/E-Commerce-Fullstack-Application">here</a>. <br><br> 
-             Note that this demo will likely take a long time to load, as the project goes offline after not being used for a certain period of time, 
-             and so it needs to be started back up when first accessed.</h3>
+          <h3>The live demo is available for use <a href="https://fullstack-e-commerce-mern-application.onrender.com/">here</a>. <br><br>
+             The source code is available <a href="https://github.com/adriendinzey/E-Commerce-Fullstack-Application">here</a>. <br><br> 
+             <b>Note that this demo will likely take a long time to load, as the project goes offline after not being used for a certain period of time, 
+             and so it needs to be started back up when first accessed.</b></h3>
       <footer>
       </footer>
     </div>
