add new data analysis project dashboard page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://adriendinzey.github.io/">Adrien Dinzey</a></h1>
+        <h1><a href=".">Adrien Dinzey</a></h1>
         <p>My personal page! Learn more about me.</p>
         <ul>
           <li><a href="https://github.com/adriendinzey"><strong>GitHub</strong></a></li>
@@ -46,6 +46,11 @@
           <li><h3><a href="./ProProjects/Data Science/Pokemon_Machine_Learning_Analysis.html">Pokemon Machine Learning Analysis</a></h3></li>
           <li><h3><a href="./ProProjects/Data Science/Billboard_Predictions.html">Billboard Predictions</a></h3></li>
           <li><h3><a href="./ProProjects/Data Science/MaskUsage_and_COVID-19.html">Mask Usage and COVID-19</a></h3></li>
+        </ul>
+
+        <h3>Data Analysis</h3>
+        <ul>
+          <li><h3><a href="./ProProjects/Data Analysis/Amazon Prime Video Dashboard.html">Amazon Prime Video Dashboard</a></h3></li>
         </ul>
 
         <h1>Hobby Projects</h1>
