--- a/ProProjects/Data Analysis/Amazon Prime Video Dashboard.html
+++ b/ProProjects/Data Analysis/Amazon Prime Video Dashboard.html
@@ -30,7 +30,7 @@
         <h1>Amazon Prime Video Dashboard</h1>
         <h4>01/2024 — 02/2024 (completed)</h4>
 
-        <embed src="./Amazon Prime Video/Amazon Prime Video Dashboard.pdf" width="990px" height="700px" />
+        <embed src="./Amazon Prime Video/Amazon Prime Video Dashboard-1.png" width="400px" height="283px" />
         <p>This project utilized Power BI to clean, prepare and present data on the Amazon Prime Video catalogue as of 2021. 
             The data was found through <a href="https://www.kaggle.com/datasets/shivamb/amazon-prime-movies-and-tv-shows">Kaggle</a> 
             and the Power BI file can be downloaded <a href="./Amazon Prime Video/Amazon Prime Video Dashboard.pbix">here</a> to view the interactive version.</p>
