--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <h1>Professional Projects</h1>
         <h3>Software Engineering</h3>
         <ul>          
+          <li><h3><a href="./ProProjects/Software Engineering/Social_Media_Platform.html">Buddy Banter (Social Media Platform)</a></h3></li>
           <li><h3><a href="./ProProjects/Software Engineering/Noodle_Shop_Mobile_App.html">Noodle Shop Mobile Application</a></h3></li>
           <li><h3><a href="./ProProjects/Software Engineering/E_Commerce_Fullstack_Application.html">E-Commerce Store Web Application</a></h3></li>
           <li><h3><a href="./ProProjects/Software Engineering/Portfolio_Manager_Fullstack_Application.html">Personal Portfolio Manager Web Application</a></h3></li>
